_footer.scss: changed

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -6,6 +6,10 @@
 	border-top: 1px solid $color-footer-border;
 }
 
+.site-footer__logo {
+    max-height: 2rem;
+}
+
 .site-footer__menu {
 	max-width: 270px;
 }
