_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -8,9 +8,9 @@ $theme-styles: (
 			sans-serif: ('Open Sans', Lato, sans-serif)
 		),
 		colors: (
-			blue:  #7076f0,
-			green: #29cf7f,
-			red:   #f36763
+			blue:  #15ABF6,
+			green: #3BE89D,
+			red:   #FF6666
 		)
 	),
 	bold: (
@@ -30,9 +30,9 @@ $theme-styles: (
 			sans-serif: ('IBM Plex Sans','Helvetica Neue', Helvetica, 'Roboto', sans-serif)
 		),
 		colors: (
-			blue:   #0084ff,
-			green:  #00cc88,
-			red:    #ff3366
+			blue:   #15ABF6,
+			green:  #3BE89D,
+			red:    #FF6666
 		)
 	)
 );
