_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -53,7 +53,7 @@ $color-body-bg:                        #fff !default;
 
 // Highlight
 $color-highlight-text:                 #2c343c !default;
-$color-highlight-bg:                   #fff7c5 !default;
+$color-highlight-bg:                   #15ABF6 !default;
 
 // Code blocks
 $color-code-border:                    #eceef1 !default;
