--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -52,7 +52,7 @@ $color-meta:                           #8696a6 !default;
 $color-body-bg:                        #fff !default;
 
 // Highlight
-$color-highlight-text:                 #2c343c !default;
+$color-highlight-text:                 #FFFFFF !default;
 $color-highlight-bg:                   #15ABF6 !default;
 
 // Code blocks
