--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -100,8 +100,8 @@ $color-bold-nav-mobile-border:         #2c343c !default;
 $color-bold-nav-mobile-overlay:        rgba(44,52,60,.8) !default;
 
 // Header
-$color-header-border:                  $color-primary !default;
-$color-bold-header-border:             #2c343c !default;
+$color-header-border:                  #eceef1 !default;
+$color-bold-header-border:             $color-primary !default;
 
 // Footer
 $color-footer-border:                  #eceef1 !default;
