_variables.scss: changed

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -101,7 +101,7 @@ $color-bold-nav-mobile-overlay:        rgba(44,52,60,.8) !default;
 
 // Header
 $color-header-border:                  #eceef1 !default;
-$color-bold-header-border:             #ff0000 !default;
+$color-bold-header-border:             #2c343c !default;
 
 // Footer
 $color-footer-border:                  #eceef1 !default;
