--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -200,9 +200,9 @@
 				&:after {
 					bottom: -12px;
 					height: 12px;
-					left: -4;
+					left: -4px;
 					opacity: 0;
-					right: -4;
+					right: -4px;
                     z-index: -1;
 				}
 			}
