--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -44,7 +44,7 @@ $font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","
 // Colors
 
 // Primary color for the gray palette
-$color-primary:                        #383C45 !default;
+$color-primary:                        #CB0676 !default;
 
 // Base
 $color-body-text:                      #2c343c !default;
